--- a/sonichq/cartoon/index.html
+++ b/sonichq/cartoon/index.html
@@ -1,8 +1,9 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>Sonic HQ Animation</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>Sonic HQ Animation</title>
+<LINK REL="SHORTCUT ICON" HREF="favicon.ico">
 <style type="text/css">
 <!-- a:hover {text-decoration: underline}
 A{text-decoration:none} -->
@@ -23,15 +24,14 @@ document.write('<link rel=stylesheet href=/sonichq/css/' + theme + '.css type="t
 <br>
 
 <center>
-<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
-MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
-</SCRIPT>
-<NOSCRIPT>
-<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
-</NOSCRIPT>
-</IFRAME>
-</center>
+<!-- Place the following code where you want an ad to appear -->
+<IFRAME SRC="https://web.archive.org/20011211000000/http://ads.ad-flow.com/?DC=ztnet-ron-top&DH=Y&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO" MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
+<ILAYER SRC="https://web.archive.org/20011211000000/http://ads.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank&DH=Y" HEIGHT="60" WIDTH="468">
+</ILAYER>
+<NOLAYER>
+<A HREF="https://web.archive.org/20011211000000/http://ads.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011211000000/http://ads.ad-flow.com/?SIT=ztnet-ron-top" HEIGHT="60" WIDTH="468"></A>
+</NOLAYER>
+</IFRAME></center>
 
 <p><span class=pathlinks><table class=glow>
 <a href=../ target=_top>Sonic HQ</a> | Animation</table></span>
@@ -63,40 +63,53 @@ document.write(titlepic)
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% class=maintable><tr>
 
 <td VALIGN=TOP WIDTH="70%" bgcolor=ffffff class=itemtable>
-<font face=Arial size=-1 color=black>
+<font face=Arial size=2 class=itemtable>
 
 <!sections>
 <div class=titlebar><table class=glow>
-<a href="before/">Sonic The Hedgehog - Before SatAM</a> - updated 9-16-99
+<a href="before/">Sonic The Hedgehog - The Prototype</a> - updated 9-16-99
 </table></div>
 
 <div class=itemtext>
 Something that no other Sonic page has, take a look at this section which holds special pre-production pictures of what MIGHT HAVE BEEN the Sonic SatAM cartoon! Special thanks to Sarah "Samanfur" Rose for locating these!<p>
 </div><div class=titlebar><table class=glow>
-<a href="SatAM.php3">Sonic The Hedgehog</a> - updated 9-24-00
+<a href="AoStH.php3">Adventures Of Sonic The Hedgehog</a> (Syndicated, Debuted 1993) - updated 10-21-01
 </table></div>
 
 <div class=itemtext>
-Everyone knows of the subpar DiC farmout "Adventures Of Sonic The Hedgehog" but do you remember what many Sonic fans TO THIS DAY consider the best of the American Sonic cartoons? First introducing LONG TIME fan favorites such as The Freedom Fighters, Snively, Ixis Naugus, The Wolf Pack and many many others, click here to get all you can find on Sonic The hedgehog - The Saturday Morning cartoon (a.k.a. "SatAM"), and learn of both its triumphs, its downfalls, and its sad demise...<p>
+Scratch, Grounder, Coconuts - but most of all that essence of nastiness Doctor Ivo Robotnik! This cartoon reveled in its own corny nature and turned Sonic into an odd mix of Bugs Bunny and the Roadrunner.  AoStH's Robotnik was a total goofball and his badniks spent most of their time playing Wile E. Coyote and being victimized either by Sonic or by Robotnik himself.
+
+<p>This was the only DiC cartoon that put much effort into following the games at all, as 2 of the badniks were from Sonic 2 (although they had little resemblance to the originals) and a remixed version of Sonic's theme song played in the opening.  It was also the only DiC Sonic cartoon to feature Tails in a prominent role.  However, the art & animation were very, very bad, and the writing was often even worse.
+
+<p>This 65-episode cartoon was supposedly intended to run on ABC Saturday mornings, but ABC rejected it.  This is why 2 vastly different Sonic cartoons came out at about the same time.  DiC made a 2nd Sonic cartoon for ABC and released AoStH in syndication.  It's the only Sonic cartoon that's been consistently on the air since it debuted.<p>
 </div><div class=titlebar><table class=glow>
-<a href="AoStH.php3">Adventures Of Sonic The Hedgehog</a> - updated 9-24-00
+<a href="SatAM.php3">Sonic The Hedgehog</a> (ABC Saturday Morning, Debuted 1993) - updated 9-24-00
 </table></div>
 
 <div class=itemtext>
-Scratch, Grounder, Coconuts - but most of all that essence of nastiness Doctor Ivo Robotnik! AoSTH premied at the same time as the Sonic cartoons, has the LARGEST numbers of episodes out of the whole series, but for those two accomplishments is widely considered the WORST of all Sonic cartoons and by many animation fans in general, one of the worst cartoons ever to come out of DiC Animation in the early 90's. Corny catch phrases, VERY limited animation, and no detail in either background or character animation. Was it really that bad or was there something behind it...Learn just what the deal was behind "Adventures Of Sonic The Hedgehog" and see for yourself...<p>
+Often referred to as "SatAM," the 26-episode ABC Sonic cartoon actually created a very large fan base all its own, including many people who hadn't had any previous interest in Sonic.  Archie also borrowed many elements from this cartoon in making their Sonic comic. SatAM boasted an impressive voice cast, including Tress MacNellie, Rob Paulsen, Jim Cummings, Cree Summer, and Tim Curry.  The art & animation were also well above average quality. It was practically an antithesis of AoStH - emotional, dramatic, and extremely dark.  SatAM also featured a continuing storyline.
+
+<p>However, it irked some fans with just how different it was.  In fact, the cartoon title and the presence of Sonic, Tails, and Robotnik were just about the only things that hinted at the fact that it was a Sonic cartoon.  Sonic, Tails, and Robotnik had all been given huge makeovers in both look and personality, the dark settings were very contrary to the stylized zones generally associated with Sonic, and Tails generally took a back seat to the Freedom Fighters (who were EXTREMELY loosely based on the animals Sonic rescued in the games) until the last few episodes.
+
+<p>SatAM unfortunately ended on a cliffhanger.  The planned 3rd season was to include a new villain and an expanded role for Tails.  Its time slot was shifted constantly in the 2nd season to avoid competition with the Power Rangers, and ABC rarely let a Saturday morning cartoon last over 2 seasons anyway.  Some information on the 3rd season can be found in the episode guide.  However, while new episodes aren't planned, SatAM is on its way back - several episodes are slated for an upcoming release on DVD.<p>
 </div><div class=titlebar><table class=glow>
-<a href="anime.php3">The Sonic Anime And Sonic: The Movie</a> - updated 9-24-00
+<a href="anime.php3">Sonic The Hedgehog</a> (Japanese OVA, Released 1996) - updated 9-24-00
 </table></div>
 
 <div class=itemtext>
-Sonikku! Teirusu! Nakkurusu! - known to Americans as: The Triple Threat! Sonic, Knuckles, and Tails hit the anime scene! Being the first cartoon to premier Knuckles The Echidna and the ONLY cartoon to use Metal Sonic, the anime was finally released in America in 1999 even though it was released FAR EARLIER in Japan. See Sonic get back to his true Japanese roots in the ONLY Sonic cartoon to utilize SegaSonic gaming material!<p>
+Sonikku! Teirusu! Nakkurusu! - known to Americans as: The Triple Threat! This 2-episode anime was the first Sonic cartoon to feature Knuckles The Echidna and the ONLY cartoon to use Metal Sonic. "The Sonic Anime," as many fans call it, kept its characters truer to the originals than its American counterparts, although it definitely uses some significant artistic license, too.  The art & animation are very impressive as well.
+
+The anime was finally released outside Japan on September 8, 1999, to roughly coincide with the release of the Dreamcast.  Both episodes were combined under the title "Sonic The Movie" in the English dub.<p>
 </div><div class=titlebar><table class=glow>
-<a href="SU.php3">Sonic Underground</a> - updated 5-17-01
+<a href="SU.php3">Sonic Underground</a> (Syndicated, Debuted 1999) - updated 5-17-01
 </table></div>
 
 <div class=itemtext>
-The current Sonic cartoon (on television right now) comes in right above the "Adventures" series in quality for Sonic but thats not really saying much. Sonic Underground combines the writing team of SatAM (now as story editors), the goofiness of AoSTH, NONE of the characters from ANY of the previous series, an often out of character Sonic, a long lost brother, Jaleel White basically playing the role of an annoying Sonic-clone as a woman, musical trinkets that glow, an elephant-man oracle, bumbling sidekicks, few Doctor Robotnik appearances, and wraps it all up in one big garbled menagerie tied with an "Alvin And The Chipmunks" bow...
-Sound positively daffy? While giving us BACK a Sonic cartoon it threw away EVERYTHING that made Sonic. Good or bad depends upon you, but click here to find out more on the cartoon labeled by many as "The Odd Man Out"...<p>
+The french-animated "Sonic Le Rebelle," DiC's 3rd Sonic cartoon, featured Sonic as one of 3 long-lost triplets who meet and decide to create a band to cheer up citizens opressed by Robotnik, who usurped the rule of their mother, Queen Aleena.  Their weapons are magic instruments that transform and they ride around in a giant van in a sort of world tour.  Combine this psychadelic premise with 2 new villains, Sleet and Dingo, who are basically canine versions of Scratch and Grounder, and you have the plot of Sonic Underground.
+
+<p>Sonic's siblings are Manic, a green thief with "punk" spikes, and Sonia, a pampered, prissy, fashion-conscious pink hedgehog.  All 3 are voiced by Jaleel White (who also voiced Sonic in both previous cartoons), which, in Sonia's case, is disastrous, to put it mildly.  Tails isn't even in the show, but on the plus side, it's the first Dic Sonic cartoon to feature Knuckles, and it has a cameo by a radically redesigned version of Archie's Athair.
+
+<p>Sonic Underground had an extremely limited release in syndication - in many large areas of North America, it never went on the air, and those stations that did show it played its 40 episodes out of order.  However, those that missed its syndicated run got an extra chance to catch it when it appeared on cable for several months.  Although many Sonic fans dislike this toon, its uniqueness has developed a small but loyal fan base.<p>
 </div><!end of sections>
 
 </td>
@@ -205,10 +218,19 @@ document.write('<p><embed src=' + midi + ' type=audio/midi autostart=true loop=t
 
 </SCRIPT></b></center>
 
+<p>Click each cartoon's title for an episode guide.
 <p>I'd like to thank everyone who has emailed us with advice, info, and compliments on the cartoons page. We really appreciate your input! SPECIAL THANKS to Doctor Zac, Alessandro Sanasi, Soneec of Sonic Pandemonium, A.J. Freda, and Jonathan Lipscomb. Thanks IMMENSELY for all your help!
 <p><center><img src="/sonichq/images/pjsmini2.gif" width=130 height=200 alt="But first - Sonic HQ: The Legal Disclaimer"><br></center>
-<center><font color="#ffcc00"> <p align="center"><font size=-1><b>Copyrights for Sega Games and Sega Comic Material belong to <a href="https://web.archive.org/20011101000000/http://www.sega.com/" target="_blank">Service Games, Inc</a> and <a href="https://web.archive.org/20011101000000/http://www.archiecomics.com/" target="_blank">Archie Comics</a>.</b> Sonic Headquarters has no connections with Sega or Archie. It was created by <a href="mailto:zifei@yahoo.com">Zifei Wu</a> and this page is maintained by <a href="mailto:neoblackbat@hotmail.com">Jonathan "WB" Gray</a> and <a href="mailto:lien_na@hotmail.com">Lien Nguyen</a>. If you want to use text, music or screenshots from Sonic HQ on your website, then we ask that you ask us permission first as it took us quite a bit of hardwork to make it. As long as you credit the site properly and also link to it everything should be OK. On the internet, artwork and original graphics are exclusive to Sonic HQ, so don't use them. All original material on this site is copyright © 1996-1999 Sonic HQ.</font></p>
+<center><font color="#ffcc00"> <p align="center"><font size=-1><b>Copyrights for Sega Games and Sega Comic Material belong to <a href="https://web.archive.org/20011211000000/http://www.sega.com/" target="_blank">Service Games, Inc</a> and <a href="https://web.archive.org/20011211000000/http://www.archiecomics.com/" target="_blank">Archie Comics</a>.</b> Sonic Headquarters has no connections with Sega or Archie. It was created by <a href="mailto:zifei@yahoo.com">Zifei Wu</a> and this page is maintained by <a href="mailto:neoblackbat@hotmail.com">Jonathan "WB" Gray</a> and <a href="mailto:lien_na@hotmail.com">Lien Nguyen</a>. If you want to use text, music or screenshots from Sonic HQ on your website, then we ask that you ask us permission first as it took us quite a bit of hardwork to make it. As long as you credit the site properly and also link to it everything should be OK. On the internet, artwork and original graphics are exclusive to Sonic HQ, so don't use them. All original material on this site is copyright © 1996-1999 Sonic HQ.</font></p>
 </center>
+<p><center><IFRAME SRC="https://web.archive.org/20011211000000/http://ads1.ad-flow.com/?DC=ztnet-ron-rst&TARGET=_blank" HEIGHT="125" WIDTH="125" SCROLLING="NO" MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
+<SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011211000000/http://ads1.ad-flow.com/?DC=ztnet-ron-rst&JS=Y&TARGET=_blank"></SCR'+'IPT>');</SCRIPT>
+<NOSCRIPT>
+<A HREF="https://web.archive.org/20011211000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-rst" TARGET="_blank"><IMG SRC="https://web.archive.org/20011211000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-rst" HEIGHT="125" WIDTH="125"></A>
+</NOSCRIPT>
+</IFRAME>
+</center>
+
 </font></td></tr>
 </table>
 <!end main table middle>
@@ -216,7 +238,7 @@ document.write('<p><embed src=' + midi + ' type=audio/midi autostart=true loop=t
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100% class=maintable><tr>
 <td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
-<td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
+<td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2001 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
 <td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
