--- a/sonichq/comics/previews/index.html
+++ b/sonichq/comics/previews/index.html
@@ -41,286 +41,14 @@
         </div>
       </td>
     </tr>
-   
-  <tr bgcolor="#000000"> 
+  
+<tr bgcolor="#000000"> 
 
       <td> 
         <div align="center"> 
-          <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
-
-            <tr bgcolor="#000099"> 
-
-              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Sonic 
-
-                The Hedgehog #98 - June, 2001</font></td>
-
-            </tr>
-
-            <tr> 
-
-              <td> 
-
-                <table width="100%" border="0" cellspacing="0" cellpadding="2">
-
-                  <tr> 
-
-                    <td width="134"> 
-
-                      <div align="center"><a href="../images/covers/sonic/large/sonic98.jpg" target="_blank"><img src="../images/covers/sonic/thumbnails/sonic98.jpg" width="134" height="208" border="0"></a></div>
-
-                    </td>
-
-                    <td> 
-
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">Writers: 
-
-                        Karl Bollers & Ken Penders<br>
-
-                        Pencilers: James Fry & Ron Lim<br>
-
-                        Inkers: Andrew Pepoy & Pam Eklund</font></p>
-
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">After 
-
-                        returning to Knothole, Geoffrey informs Elias that Robotnik 
-
-                        still has robotization on his mind. Sally disguises herself 
-
-                        as a servant and manages to sneak out of Castle Acorn 
-
-                        in order to go see Sonic, but Sonic has his hands full 
-
-                        trying to stay incognito while he continues his quest 
-
-                        for Arachnis and the Sword - not to mention Mina, Sally's 
-
-                        latest rival for Sonic's affection. And just like last 
-
-                        issue - what's with all the missing Overlanders? Plus, 
-
-                        another Knuckles back-up story, guest-starring Sonic's 
-
-                        buddy Tails.</font></p>
-
-                      </td>
-
-                  </tr>
-
-                </table>
-
-              </td>
-
-            </tr>
-
-          </table>
-
-          <br>
-          <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
-            <tr bgcolor="#000099"> 
-              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Sonic 
-                The Hedgehog #99 - July, 2001</font></td>
-            </tr>
-            <tr> 
-              <td> 
-                <table width="100%" border="0" cellspacing="0" cellpadding="2">
-                  <tr> 
-                    <td width="134"> 
-                      <div align="center"><a href="../images/covers/sonic/large/sonic99.jpg" target="_blank"><img src="../images/covers/sonic/thumbnails/sonic99.jpg" width="134" height="208" border="0"></a></div>
-                    </td>
-                    <td> 
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">&quot;Blow 
-                        By Blow&quot;</font></p>
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">Writers: 
-                        Karl Bollers<br>
-                        Pencilers: James </font><font face="Arial, Helvetica, sans-serif" size="2">Fry</font></p>
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">Sally 
-                        disguises herself as a servant and manages to sneak out 
-                        of Castle Acorn in order to go see Sonic, but Sonic has 
-                        his hands full trying to stay incognito while he continues 
-                        his quest for Arachnis and the Sword. Plus, another Knuckles 
-                        back-up story by Ken Penders and artist Ron Lim.</font></p>
-                      </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-          </table>
-          <br>
-          <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
-            <tr bgcolor="#000099"> 
-              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Sonic 
-                The Hedgehog #100 - August, 2001</font></td>
-            </tr>
-            <tr> 
-              <td> 
-                <table width="100%" border="0" cellspacing="0" cellpadding="2">
-                  <tr> 
-                    <td width="134"> 
-                      <div align="center"><a href="../images/covers/sonic/large/sonic100.jpg" target="_blank"><img src="../images/covers/sonic/thumbnails/sonic100.jpg" width="134" height="208" border="0"></a></div>
-                    </td>
-                    <td> 
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">&quot;Reunion"</font></p>
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">Sonic 
-                        and Princess Sally reunite for the first time since Sonic 
-                        was divested of his knighthood, but it's not quite what 
-                        the heroic hedgehog had in mind. Ironically, it all takes 
-                        place in that mechanized metropolis of Robotropolis, but 
-                        that's not the most shocking surprise: the bittersweet 
-                        reunion is made even more so by the loss of one of Knothole's 
-                        own. Plus: another Knuckles back-up story. The recent 
-                        exploits and intrigue of Knuckles collide in one combustible 
-                        story, as Knuckles faces off against Dimitri and the Dark 
-                        Legion. The fate of literally everyone on Mobius hangs 
-                        in the balance, not to mention Knuckles' family and friends, 
-                        helplessly trapped in another zone.</font></p>
-                      </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-          </table>
-          <br>
-          <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
-            <tr bgcolor="#000099"> 
-              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Sonic 
-                The Hedgehog #101 - September, 2001</font></td>
-            </tr>
-            <tr> 
-              <td> 
-                <table width="100%" border="0" cellspacing="0" cellpadding="2">
-                  <tr> 
-                    <td width="134"> 
-                      <div align="center"><a href="../images/covers/sonic/large/sonic101.jpg" target="_blank"><img src="../images/covers/sonic/thumbnails/sonic101.jpg" width="134" height="208" border="0"></a></div>
-                    </td>
-                    <td> 
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">Writers: 
-                        Karl Bollers &amp; Ken Penders<br>
-                        Artists: Ron Lim, Jim Amash &amp; Penders</font></p>
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">After 
-                        the catastrophic events of Sonic #100, Sonic and his friends 
-                        find themselves living in a world that bears no resemblance 
-                        to the one they've always known. Who - or - what is responsible? 
-                        Plus: Knuckles in "Replacing Reality." Can it be so? Has 
-                        Knuckles aligned himself with Dimitri and the Dark Legion? 
-                        And can he really be serious about reversing history without 
-                        considering the repercussions? Could it possibly tie into 
-                        the intrigue Sonic and his friends have recently found 
-                        themselves in?</font></p>
-                      </td>
-                  </tr>
-                </table>
-
-
-              </td>
-            </tr>
-          </table>
-
-<br>
-
-          <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
-
-            <tr bgcolor="#000099"> 
-
-              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Sonic 
-
-                The Hedgehog #102 - October, 2001</font></td>
-
-            </tr>
-
-            <tr> 
-
-              <td> 
-
-                <table width="100%" border="0" cellspacing="0" cellpadding="2">
-
-                  <tr> 
-
-                    <td width="134"> 
-
-                      <div align="center"><a href="/sonichq/comics/images/covers/sonic/large/sonic102.jpg" target="_blank"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic102.jpg" width="134" height="208" border="0"></a></div>
-
-                    </td>
-
-                    <td> 
-
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">Writers: 
-
-                        Karl Bollers & Ken Penders<br>
-
-                        Pencilers: Ron Lim & Dawn Best<br>
-
-                        Inkers: Andrew Pepoy & Pam Eklund</font></p>
-
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">"Family Dysfunction". There's much cause for celebration when Sonic, Tails, Princess Sally and the Freedom Fighters return to Knothole with the roboticized mobians. So, if that's the case, why isn't the Royal Family smiling? Maybe it's because they've been betrayed by trusted allies, and are being held hostage in Castle Acorn! Can Sonic save them all? Fans won't believe how this issue ends! The thrilling conclusion to last issue's story wherein Knuckles has only two more chances to change history, hopefully resulting in a utopia where all echidnas get along and Mobius is a paradise..but will Knuckles spot the one flaw in his plan in time to correct it? 
-</font></p>
-
-                      </td>
-
-                  </tr>
-
-                </table>
-
-              </td>
-
-            </tr>
-
-          </table>
-
-
-<br>
-
-          <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
-
-            <tr bgcolor="#000099"> 
-
-              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Sonic 
-
-                The Hedgehog #103 - November, 2001</font></td>
-
-            </tr>
-
-            <tr> 
-
-              <td> 
-
-                <table width="100%" border="0" cellspacing="0" cellpadding="2">
-
-                  <tr> 
-
-                    <td width="134"> 
-
-                      <div align="center"><a href="/sonichq/comics/images/covers/sonic/large/sonic103.jpg" target="_blank"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic103.jpg" width="134" height="208" border="0"></a></div>
-
-                    </td>
-
-                    <td> 
-
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">Writer: 
-
-                        Mike Gallagher<br>
-
-                        Art: Jim Valentino, Dave Manak, & Harvo</font></p>
-
-                      <p><font face="Arial, Helvetica, sans-serif" size="2">"Freedom Fights of the Galaxy Part One." A tribute to the Guardians of the Galaxy brought to readers by the team that created them, writer Mike Gallagher and artist Jim Valentino. In an alternate future, Sonic comes back to Mobius after being in space for a thousand years to find the planet in worse shape than when he left it. Teaming up with the descendants of the original Freedom Fighters, the heroes combat an evil so great, they with the original Robotnik was back. Plus: The Return of Downunda Freedom Fighters, squaring off against the Bunyip in a tale recalling the early days of the Sonic comic series. 
-
-
-</font></p>
-
-                      </td>
-
-                  </tr>
-
-                </table>
-
-              </td>
-
-            </tr>
-
-          </table>
-
-<br>
-
-          <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
+                    
+       
+            <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
 
             <tr bgcolor="#000099"> 
 
@@ -369,6 +97,162 @@
 
           </table>
 
+<br>
+
+          <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
+
+            <tr bgcolor="#000099"> 
+
+              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Sonic 
+
+                The Hedgehog #105 - January, 2002</font></td>
+
+            </tr>
+
+            <tr> 
+
+              <td> 
+
+                <table width="100%" border="0" cellspacing="0" cellpadding="2">
+
+                  <tr> 
+
+                    <td width="134"> 
+
+                      <div align="center"><a href="/sonichq/comics/images/covers/sonic/large/sonic105.jpg" target="_blank"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic105.jpg" width="134" height="208" border="0"></a></div>
+
+                    </td>
+
+                    <td> 
+
+                      <p><font face="Arial, Helvetica, sans-serif" size="2">Writers: 
+
+                        Karl Bollers & Mike Gallagher<br>
+
+                        Art: Ron Lim</font></p>
+
+                      <p><font face="Arial, Helvetica, sans-serif" size="2">"Touch of Evil" Sonic returns to Robotropolis on a top secret mission that may prove to be his last! Plus, the final fate of Snively! (provided by Karl Bollers)<p>The Overlanders discover something really terrifying about Robotnik as a long-time character undergoes a most unexpected development that even Sonic can't believe.  Also, the conclusion to the Downunda saga. (provided by Sonic-Grams in issue #104)
+ 
+
+
+</font></p>
+
+                      </td>
+
+                  </tr>
+
+                </table>
+
+              </td>
+
+            </tr>
+
+          </table>
+<br>
+
+          <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
+
+            <tr bgcolor="#000099"> 
+
+              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Sonic 
+
+                The Hedgehog #106 - February, 2002</font></td>
+
+            </tr>
+
+            <tr> 
+
+              <td> 
+
+                <table width="100%" border="0" cellspacing="0" cellpadding="2">
+
+                  <tr> 
+
+                    <td width="134"> 
+
+                      <div align="center"><a href="/sonichq/comics/images/covers/sonic/large/sonic106.jpg" target="_blank"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic106.jpg" width="134" height="208" border="0"></a></div>
+
+                    </td>
+
+                    <td> 
+
+                      <p><font face="Arial, Helvetica, sans-serif" size="2">Writers: 
+
+                        Karl Bollers & Ken Penders<br>
+
+                        Art: Ron Lim, Pam Eklund, Andrew Pepoy, & Ken Penders</font></p>
+
+                      <p><font face="Arial, Helvetica, sans-serif" size="2">"Crouching Hedgehog, Hidden Dragon, Part One." Princess Sally, Knothole Village's first ambassador, is sent on her first mission as an envoy of peace to the rest of Mobius. Sonic and the Freedom Fighters join her on her trek to The Hidden City of the Ancients. Before talks can commence, however, the Ancients ask the FF to help with a small problem they are having: a fire-breathing dragon. Plus: Knuckles in "Reunification, Part One." A mysterious echidna appears on the Floating Island. Rather than finding Knuckles, they find a place inhabited by The Dark Legion. Who is this echidna and what does it have to do with Knuckles? 
+
+ 
+ 
+
+
+</font></p>
+
+                      </td>
+
+                  </tr>
+
+                </table>
+
+              </td>
+
+            </tr>
+
+          </table>
+
+<br>
+
+  <table border="1" cellspacing="0" cellpadding="0" width="100%" bordercolor="#000099">
+
+            <tr bgcolor="#000099"> 
+
+              <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2" color="#FFFFFF">Sonic 
+
+                The Hedgehog #107 - March, 2002</font></td>
+
+            </tr>
+
+            <tr> 
+
+              <td> 
+
+                <table width="100%" border="0" cellspacing="0" cellpadding="2">
+
+                  <tr> 
+
+                    <td width="134"> 
+
+                      <div align="center"><a href="/sonichq/comics/images/covers/sonic/large/sonic107.jpg" target="_blank"><img src="/sonichq/comics/images/covers/sonic/thumbnails/sonic107.jpg" width="134" height="208" border="0"></a></div>
+
+                    </td>
+
+                    <td> 
+
+                      <p><font face="Arial, Helvetica, sans-serif" size="2">Writers: 
+
+                        Karl Bollers and Ken Penders<br>
+
+                        Art: Ron Lim, Pam Eklund, Andrew Pepoy, Dawn Best and Penders</font></p>
+
+                      <p><font face="Arial, Helvetica, sans-serif" size="2">"Crouching Hedgehog, Hidden Dragon Part Two." Things are heating up as Sonic continues defending the Hidden City of the Ancients from the dragon that besieged it in the last issue. Meanwhile, the rest of the Freedom Fighters do their best to keep damage to a minimum - both to the building and the citizenry, whose alliance the Freedom Fighters are counting on. It's not easy - someone or something is intent on keeping them from accomplishing their mission. Who could it be? "Reunification Part Two." It's the moment Knuckles fans have been waiting for: the embattled hero has finally restored his family and friends back to their home of the Floating Island - but with the Dark Legion now part of the equation, can confrontation be far behind? 
+
+
+
+</font></p>
+
+                      </td>
+
+                  </tr>
+
+                </table>
+
+              </td>
+
+            </tr>
+
+          </table>
 
 
         </div>
